<resources>
    <string name="app_name">礼物说</string>

    <!--一级界面下面的导航名称-->
    <string name="main_home_name">首页</string>
    <string name="main_gift_name">榜首</string>
    <string name="main_category_name">分类</string>
    <string name="main_profile_name">我</string>

    <!--主header界面名称-->
    <string name="home_top_name">礼物说</string>
    <string name="gift_top_name">礼物榜</string>
    <string name="home_top_search_name">选份走心的好礼送给Ta</string>
    <string name="profile_avatar_name">请登录</string>

    <!--我界面的菜单名称-->
    <string name="profile_mean_cart">购物车</string>
    <string name="profile_mean_order">订单</string>
    <string name="profile_mean_coupon">礼劵</string>
    <string name="profile_mean_follow">关注</string>
    <string name="profile_mean_service">客服</string>

    <!--分类界面的名称-->
    <!--搜索内容-->
    <string name="category_search_content">选份走心的好礼送给Ta</string>
    <!--攻略菜单名称-->
    <string name="category_raiders_column">栏目</string>
    <!--攻略品种名称-->
    <string name="category_raiders_kind">品种</string>
    <!--攻略风格名称-->
    <string name="category_raiders_style">风格</string>
    <!--攻略对象名称-->
    <string name="category_raiders_target">对象</string>


    <!--下拉刷新通用版-->
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <string name="hello">+86</string>

</resources>
