<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/me_avatar_ll"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@mipmap/bg_profile"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profile_avatar_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@mipmap/icon_message" />

        <ImageView
            android:id="@+id/profile_avatar_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:src="@mipmap/me_settings" />

        <ImageView
            android:id="@+id/avatar_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_toLeftOf="@id/profile_avatar_settings"
            android:src="@mipmap/icon_scan" />


        <TextView
            android:id="@+id/profile_avatar_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableTop="@mipmap/me_avatar_boy"
            android:gravity="center"
            android:text="@string/profile_avatar_name"
            android:textColor="@color/color_text" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/profile_mean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/activity_zero_margin"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_small_margin"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_cart"
            android:gravity="center"
            android:text="@string/profile_mean_cart"
            android:textSize="@dimen/text_more_middle_size" />

        <TextView
            android:layout_width="@dimen/activity_zero_margin"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_small_margin"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_order"
            android:gravity="center"
            android:text="@string/profile_mean_order"
            android:textSize="@dimen/text_more_middle_size" />

        <TextView
            android:layout_width="@dimen/activity_zero_margin"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_small_margin"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_coupon"
            android:gravity="center"
            android:text="@string/profile_mean_coupon"
            android:textSize="@dimen/text_more_middle_size" />

        <TextView
            android:layout_width="@dimen/activity_zero_margin"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_small_margin"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_follow"
            android:gravity="center"
            android:text="@string/profile_mean_follow"
            android:textSize="@dimen/text_more_middle_size" />

        <TextView
            android:layout_width="@dimen/activity_zero_margin"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_small_margin"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_service"
            android:gravity="center"
            android:text="@string/profile_mean_service"
            android:textSize="@dimen/text_more_middle_size" />

    </LinearLayout>

    <View
        android:id="@+id/profile_view1"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="#bababa" />

    <View
        android:id="@+id/profile_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_small_margin"
        android:background="#e6e5e5" />


    <View
        android:id="@+id/profile_view2"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="#bababa" />

    <android.support.design.widget.TabLayout
        android:id="@+id/profile_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_bg" />

    <android.support.v4.view.ViewPager
        android:id="@+id/profile_vp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_bg">

    </android.support.v4.view.ViewPager>
</LinearLayout>